# cppcourse-brunel

./: .gitignore  CMakeLists.txt  constants.hpp  main.cpp  network.cpp  network.hpp  neuron.cpp  neuron.hpp  neuron_unittest.cc  spikes.gdf
googletest/: CMakeCache.txt  Makefile  cmake_install.cmake  neuron
